syntax = "proto3";

package good.middleware.app.subscription.oneshot.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/good/middleware/v1/subscription/oneshot";

import "basetypes/good/v1/enums.proto";
import "basetypes/v1/conds.proto";

message OneShotReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppID = 30;
    optional string GoodID = 40;
    optional string AppGoodID = 50;
    optional string Name = 70;
    optional string Banner = 80;
    optional string USDPrice = 90;
}

message OneShot {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"good_id"
    string GoodID = 40;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 50;
    // @inject_tag: sql:"product_page"
    string ProductPage = 60;
    // @inject_tag: sql:"good_type"
    string GoodTypeStr = 70;
    basetypes.good.v1.GoodType GoodType = 80;
    // @inject_tag: sql:"good_name"
    string GoodName = 90;
    // @inject_tag: sql:"app_good_name"
    string AppGoodName = 100;
    // @inject_tag: sql:"banner"
    string Banner = 150;
    // @inject_tag: sql:"quota"
    uint32 Quota = 180;
    // @inject_tag: sql:"usd_price"
    string USDPrice = 190;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 1010;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.Uint32SliceVal IDs = 20;
    optional basetypes.v1.StringVal AppID = 30;
    optional basetypes.v1.StringSliceVal AppIDs = 40;
    optional basetypes.v1.StringVal EntID = 50;
    optional basetypes.v1.StringSliceVal EntIDs = 60;
    optional basetypes.v1.StringVal GoodID = 70;
    optional basetypes.v1.StringSliceVal GoodIDs = 80;
    optional basetypes.v1.StringVal AppGoodID = 90;
    optional basetypes.v1.StringSliceVal AppGoodIDs = 100;
    optional basetypes.v1.Uint32Val GoodType = 120;
}

